# binge_at_home

./: .gitignore  .prettierrc.json  CHANGELOG.md  Cargo.toml  DEV.md  README.md  cog.toml  docker-compose.yml  justfile  postman_collection.json  setup.sh  tsconfig.json
.github/workflows/: client.yml  conventional-commits.yml  release.yml  rust.yml  server.yml  vue.yml
backend/: .gitignore  README.md  pom.xml
backend/src/main/resources/: application.properties  banner.txt
client/: .dockerignore  .prettierignore  CHANGELOG.md  Dockerfile  README.md  nuxt.config.ts  package-lock.json  package.json
config/: app.yml
database/: Dockerfile
database/scripts/: init.sql
dev/: fixtures.sql
docker/client/: Dockerfile
docker/server/: Dockerfile
frontend/: README.md  package-lock.json  package.json  vue.config.js
frontend/public/: index.html
frontend/src/: App.vue  main.js
frontend/src/api/: video-api.js
frontend/src/components/: Player.vue  VideoList.vue
frontend/src/router/: routes.js
frontend/src/store/: store.js
frontend/src/views/: Home.vue  NotFound.vue  Video.vue
server/: .dockerignore  .env.dev  .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  build.rs
server/.sqlx/: query-027c993832d50dbe074f49f128dbc4ca7e61c3690898eb08c1782e3f8f10be39.json  query-0f0d5ada93745c796c2038663b92313c2dc066b5da1e3cc608d4809d538e18e5.json  query-11f3e23f8bf36ce72c39c1d5a5205d98f1483ec318c15fca2fcde2163f361fa0.json  query-127fd9ba8999613a143a99ce4680af020cd34752880ff67a0dae1a02fdcca961.json  query-1b5abd055c1f8a1cbf379b819fca719ae9f13acd50125408b7348c334755bb3c.json  query-20552843457a09e9827dc3a8ea2a41dde1636f010e962a5b999f7a53722e6253.json  query-2457ef6661e18f3ffcceda3bf183840e420fedcb426e240c9b99e1025004f42a.json  query-24e0292f36413cf64d7715f1bf2cc67c84bdd11a5a908627c8475239addccfc8.json  query-2e1a7d40d6fea40f9b6c148bc936ca2c92dd0ac53f3e42b16936976ea2307c98.json  query-38a38b33f65650f41de2cd4387d349973894a51a47caf4781e944028249d919d.json  query-430b2daa92b6332c6145dc7b1983927dfcad1d26da1908678d5a925cfd49ee50.json  query-451aee0e39a55867538e0fcde0a2ccd396b51c1a2719697b1cdf8ae4c766e06b.json  query-4a7e706bc5962cf25b65ed1f22f3eaaa81f25f47033ed2a95cd1d702ad008681.json  query-5039b0013c2e8b769618c8490dd0ba1274ee31bb8bc69cc069d1775abc07bfa7.json  query-51d79844cb4a65c9b36449cd057e24f5d169990eafd4b23c16f306d3e1bbf2db.json  query-53e72b4785ef8f7d305d03502a864747b95b199d5bc77bb97aaf8e25a7bc83ec.json  query-54f42bb41e3d7a56eee06e68e04502020c8cc3735ba3f29f547fb2c4ee55a67e.json  query-63dc979b1f3414266869a2ba9b253e113d7321b55ffe520682dcb6a56cf261d3.json  query-71fd5cdb8743903586bf19c1e40c79117d32259bc0767d7249cfe578a8d43ab5.json  query-79172625b51a1fb88fae77a736276cc524b13cc8b7b866c1a82c5bb3b9a63009.json  query-7aae3b4b76caeaa11804b2f73c51f0c1cf69c45c38635a7bc5858e675b45f6b4.json  query-7b347b8b36435b652ee6a198dfa52244a382f4f02962cffbf74d2e5857677ab6.json  query-81aa9b28bcab90696db8a5493a24a6e291a272de3cead344ecbf54c63eae6b2c.json  query-886724c1b80f1b7ddf78ce9f6062717c11229e50d4a3473301842cf77526c01c.json  query-a7e1ec94eb117fbff9ce198d4e3286caf0ccb5d80158edc106038969374c0975.json  query-a91acdda83d831d640f6850197f41fa5a23a5558024b7297b9531fb892253f26.json  query-b30a38f70e72e26f6b1a3ebed01dbace93f487d65d07d8d919fd24b8c9cfc7dc.json  query-b6800e7ade35167d1b3091d584c21d5477fe1b9e5f646c0cd9ef568c4aa39c37.json  query-c1c83064021f6d1fb14d9a3ade7a2600e5f372b3ae0eb556423d91c69f87512b.json  query-cd7348054be289e0bc900bcee80d6f8da1d46de16b4de92f6c898d3da4ce1704.json  query-ce5f98f09422ba3bad70b25c01c7fa57dddb4c69033a160406d413d3fa457e20.json  query-d017481b32840da85cb08cd232dbf11099ed63b1888cdfdd3bf02a3a33e2a7f9.json  query-d69696471fdd06dc650ffc2c0f3d068d3da655012a71818ca05c692a06ed8b1c.json  query-d90c309ba70abf38af1d65d2815f790cf26ad5c25dd9ebb357b3619745a48af1.json  query-e11350cd3a66119823cbd22a28d21a9f5871838281535abfd1197719bc7ed261.json
server/api/: Cargo.toml
server/config/: app.yml
server/core/: Cargo.toml
server/core/src/: catalog.rs  lib.rs  video.rs
server/core/src/catalog/: get_catalog.rs  list_catalogs.rs
server/core/src/video/: get_video.rs
server/docker/config/: app.yml
server/domain/: Cargo.toml
server/domain/src/: lib.rs
server/macros/: CHANGELOG.md  Cargo.toml
server/macros/src/: lib.rs
server/migrations/: 20230813173551_create_catalog_and_video_tables.down.sql  20230813173551_create_catalog_and_video_tables.up.sql  20230820121504_create_update_audit_trigger.down.sql  20230820121504_create_update_audit_trigger.up.sql
server/resources/: banner.txt
server/src/: api.rs  configuration.rs  crud.rs  database.rs  elastic.rs  error.rs  file_access.rs  lib.rs  logging.rs  main.rs  model.rs  search.rs  startup.rs  swagger.rs
server/src/api/: browse.rs  catalog_explorer.rs  catalogs.rs  explorer.rs  file.rs  filters.rs  fragment.rs  fragments.rs  health_check.rs  include.rs  search.rs  technical_error.rs  video_details.rs  video_watch.rs
server/src/api/file/: scan_store.rs  stream.rs
server/src/api/fragment/: autosuggest.rs  breadcrumbs.rs  browse.rs  list_catalogs.rs  pager.rs
server/src/api/fragments/: browse.rs  list_catalogs.rs  test.rs
server/src/api/include/: breadcrumbs.rs  pager.rs  sortable_header.rs
server/src/crud/: catalog.rs  metadata.rs  video.rs
server/templates/: browse.html  catalogs.html  explorer.html  health-check.html  search.html  technical-error.html  video-details.html  video-watch.html
server/templates/assets/css/: browse.css  explorer.css  health-check.css  main.css  search.css  technical-error.css
server/templates/assets/css/fragments/: autosuggest.css  pager.css
server/templates/assets/css/includes/: breadcrumbs.css
server/templates/assets/css/partials/: base.css  explorer.css
server/templates/assets/js/: main.js
server/templates/fragments/: autosuggest.html  breadcrumbs.html  browse.html  list-catalogs.html  test.html
server/templates/includes/: breadcrumbs.html  pager.html  sortable-header.html
server/templates/partials/: base.html  explorer.html
(+81 files in other folders)
