[package]
name = "binge-at-home"
version = "0.2.0"
description = "Self-hosted video streaming application"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "binge-at-home"

[dependencies]
anyhow = "1.0.75"
# TODO remove after async trait staibilisation
async-trait = "0.1.73"
axum = { version = "0.6.20", features = ["macros"] }
axum-extra = { version = "0.7.7", features = ["typed-routing"] }
confique = { version = "0.2.4", default-features = false, features = ["yaml"] }
convert_case = "0.6.0"
fake = { version = "2.8.0", features = ["time"] }
secrecy = { version = "0.8.0", features = ["serde"] }
serde = { version = "1.0.183", features = ["derive"] }
serde_json = "1.0.105"
sqlx = { version = "0.7.1", default-features = false, features = [
    "runtime-tokio",
    "tls-rustls",
    "postgres",
    "macros",
    "time",
] }
time = "0.3.25"
tokio = { version = "1.32.0", features = ["full"] }
tower = "0.4.13"
tower-http = { version = "0.4.3", features = [
    "util",
    "compression-gzip",
    "cors",
    "limit",
    "trace",
    "request-id",
    "timeout",
    "validate-request",
    "catch-panic",
] }
tracing = "0.1.37"
tracing-appender = "0.2.2"
tracing-subscriber = { version = "0.3.17", features = ["registry"] }
utoipa = "3.4.4"
utoipa-swagger-ui = { version = "3.1.5", features = ["axum"] }

[features]
default = []
# compiles migrations into the binary and runs them on migrations on startup
migrate = ["sqlx/migrate"]

[dev-dependencies]
fake = "2.8.0"
pretty_assertions = "1.4.0"
