[package]
name = "binge-at-home"
version = "0.3.0"
description = "Self-hosted video streaming application"
edition = "2021"
build = "build.rs"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "binge-at-home"

[workspace]
members = ["macros"]

[features]
default = ["migrate"]
# compiles migrations into the binary and runs them on migrations on startup
migrate = ["sqlx/migrate"]

[dependencies]
anyhow = "1.0.75"
askama = { version = "0.12.1", features = ["with-axum"] }
askama_axum = "0.3.0"
# TODO remove after async trait staibilisation
async-trait = "0.1.73"
axum = { version = "0.6.20", features = ["macros", "headers"] }
axum-extra = { version = "0.7.7", features = ["typed-routing"] }
axum-macros = "0.3.8"
confique = { version = "0.2.4", default-features = false, features = ["yaml"] }
convert_case = "0.6.0"
http = "0.2.9"
http-body = "0.4.5"
macros = { version = "0.1.0", path = "macros" }
secrecy = { version = "0.8.0", features = ["serde"] }
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
sqlx = { version = "0.7.2", default-features = false, features = [
    "runtime-tokio",
    "tls-rustls",
    "postgres",
    "macros",
    "time",
] }
thiserror = "1.0.49"
time = { version = "0.3.29", features = ["serde", "formatting", "macros"] }
tokio = { version = "1.32.0", features = ["full"] }
tokio-util = "0.7.9"
tower = "0.4.13"
tower-http = { version = "0.4.4", features = [
    "fs",
    "util",
    "compression-gzip",
    "cors",
    "limit",
    "trace",
    "request-id",
    "timeout",
    "validate-request",
    "catch-panic",
    "set-header",
] }
tower-livereload = "0.8.1"
tracing = "0.1.37"
tracing-appender = "0.2.2"
tracing-subscriber = { version = "0.3.17", features = ["registry"] }

[dev-dependencies]
fake = { version = "2.8.0", features = ["time", "derive"] }
pretty_assertions = "1.4.0"
