[package]
name = "binge-at-home"
version = "0.3.0"
description = "Self-hosted video streaming application"
edition = "2021"
build = "build.rs"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "binge-at-home"

[workspace]
members = ["macros"]

[features]
default = ["migrate"]
# compiles migrations into the binary and runs them on migrations on startup
migrate = ["sqlx/migrate"]

[dependencies]
anyhow = "1.0.75"
askama = { version = "0.12.1", features = ["with-axum"] }
askama_axum = "0.3.0"
# TODO remove after async trait staibilisation
async-trait = "0.1.73"
axum = { version = "0.6.20", features = ["macros", "headers"] }
axum-extra = { version = "0.7.7", features = ["typed-routing"] }
axum-macros = "0.3.8"
confique = { version = "0.2.4", default-features = false, features = ["yaml"] }
convert_case = "0.6.0"
ffprobe = "0.3.3"
http = "0.2.9"
http-body = "0.4.5"
macros = { version = "0.1.0", path = "macros" }
normpath = "1.1.1"
notify = { version = "6.1.1", default-features = false, features = [
    "macos_kqueue",
] }
notify-debouncer-full = { version = "0.3.1", default-features = false }
secrecy = { version = "0.8.0", features = ["serde"] }
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
sqlx = { version = "0.7.2", default-features = false, features = [
    "runtime-tokio",
    "tls-rustls",
    "postgres",
    "macros",
    "time",
] }
thiserror = "1.0.49"
time = { version = "0.3.29", features = ["serde", "formatting", "macros"] }
tokio = { version = "1.32.0", features = ["full"] }
tokio-util = "0.7.9"
tower = "0.4.13"
tower-http = { version = "0.4.4", features = [
    "fs",
    "util",
    "compression-gzip",
    "cors",
    "limit",
    "trace",
    "request-id",
    "timeout",
    "validate-request",
    "catch-panic",
    "set-header",
] }
tower-livereload = "0.8.1"
tracing = "0.1.37"
tracing-appender = "0.2.2"
tracing-subscriber = { version = "0.3.17", features = [
    "alloc",
    "ansi",
    "fmt",
    "nu-ansi-term",
    "registry",
    "sharded-slab",
    "smallvec",
    "std",
    "thread_local",
], default-features = false }
walkdir = "2.4.0"

[dev-dependencies]
fake = { version = "2.8.0", features = ["time", "derive"] }
pretty_assertions = "1.4.0"

[lints.rust]
unsafe_code = "forbid"
keyword_idents = "warn"
missing_copy_implementations = "warn"
missing_debug_implementations = "warn"
non_ascii_idents = "warn"
noop_method_call = "warn"
unused_import_braces = "warn"

[lints.clippy]
cognitive_complexity = "warn"
dbg_macro = "warn"
debug_assert_with_mut_call = "warn"
doc_link_with_quotes = "warn"
doc_markdown = "warn"
empty_line_after_outer_attr = "warn"
empty_structs_with_brackets = "warn"
float_cmp = "warn"
float_cmp_const = "warn"
float_equality_without_abs = "warn"
missing_const_for_fn = "warn"
mod_module_files = "warn"
option_if_let_else = "warn"
print_stderr = "warn"
print_stdout = "warn"
semicolon_if_nothing_returned = "warn"
unseparated_literal_suffix = "warn"
shadow_unrelated = "warn"
similar_names = "warn"
suspicious_operation_groupings = "warn"
unused_self = "warn"
use_debug = "warn"
used_underscore_binding = "warn"
useless_let_if_seq = "warn"
wildcard_dependencies = "warn"
wildcard_imports = "warn"
